Fix spacing between About and Services sections - remove bottom margins and top padding

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -83,7 +83,7 @@
 }
 
 .about-body-group {
-  margin-bottom: 40px;
+  margin-bottom: 0;
   max-width: 90vw;
 }
 
@@ -281,7 +281,7 @@
   
   .about-body-group {
     text-align: left;
-    margin-bottom: 40px;
+    margin-bottom: 0;
     max-width: 100%;
   }
   
